bg(footer): fix footer display on mobile
- modify index.scss
- remove footer from dashboard and singlerequest

[Deliver #161013117]

--- a/React/src/styles/index.scss
+++ b/React/src/styles/index.scss
@@ -74,7 +74,7 @@ a {
 
 
 #root {
-  min-height: 100vh;
+  min-height: 100%;
   position: relative;
 
   .brand {
@@ -160,6 +160,8 @@ a {
     margin: 150px auto;
     padding: 2%;
     width: 40%;
+    margin-bottom: unset;
+
 
     .form-inner {
       margin: 10px;
@@ -272,10 +274,6 @@ a {
   }
 
 
-
-
-
-
   @media only screen and (max-width: 900px) {
     .brand {
       font-size: 22px;
@@ -310,10 +308,12 @@ a {
     .form-wrapper,
     .request-wrapper {
       width: 95%;
+      margin: 100px auto;
+
     }
 
     .form-title {
-      font-size: 1em;
+      font-size: 2em;
     }
     .table-res {
       overflow-x: auto;
@@ -324,6 +324,11 @@ a {
     .wrapper {
       width: 90%;
     }
+
+     .view-request-wrapper {
+       padding: unset;
+       width: 100%;
+     }
   }
 }
 
